# cement

./: .gitignore  README.md
cinderblock/: pyproject.toml  readme.md
cinderblock/src/cinderblock/migrations/: 0001_initial.py
cinderblock/src/cinderblock/wagtail/: settings_hooks.py
docs/: installing-addons.md  project-templates.md  todo.md
docs/dev/: cement-base-project-template.md
docs/knowledge/: choosing-a-database.md  developer-admin-user.md  development-methods.md  (+2 more)
mock-site/: readme.md
modules/: readme.md
portland-cement/: README.md  pyproject.toml  setup.py
portland-cement/src/portland/: __init__.py  __main__.py  args.py  get_wagtail_template.py  loader.py  log.py  messages.py  register.py  run.py
portland-cement/src/portland/apps/: ensure_venv.py
portland-cement/src/portland/commands/: create.py  fetch.py  first.py  manage_run.py  ping.py  readme.md  starter.py
portland-cement/src/portland/project_templates/blank/project_template/: readme.md
portland-cement/src/portland/project_templates/wagtail/: readme.md
portland-cement/src/portland/project_templates/wagtail/v5/project_template/: .dockerignore  readme.md  requirements.txt
portland-cement/src/portland/project_templates/wagtail/v5/project_template/project_name/settings/: base.py
portland-cement/src/portland/project_templates/wagtail/v6/project_template/: dev-first-install.py  requirements.txt
portland-cement/src/portland/project_templates/wagtail/v6/project_template/home/: models.py
portland-cement/src/portland/project_templates/wagtail/v6/project_template/home/templates/home/: cinderblock_page.html  home_page.html  welcome_page.html
portland-cement/src/portland/project_templates/wagtail/v6/project_template/project_name/settings/: base.py
portland-cement/src/portland/project_templates/wagtail/v6/project_template/project_name/templates/alt-base/: three-col.html
portland-cement/src/portland/project_templates/wagtail/v6/project_template/project_name/templates/block_forms/: struct-block-field.html  tabbed-struct-block.html
portland-cement/src/portland/project_templates/wagtail/v6/project_template/project_name/templates/blocks/: default-content-block.html  generic-streamfield-block.html  heading-block.html
websites/: readme.md
workspace/: readme.md
(+65 files in other folders)
