# https://packaging.python.org/en/latest/specifications/declaring-project-metadata/#example

[project]
name = "portland-cinderblock"
# version = "0.1a"
authors = [
  { name="undefined", email="portland-cinderblock@example.com" },
]
description = "Extensions to wagtail"
readme = "readme.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
license = {text='MIT'}
dynamic = ['version']
# dependencies
# dynamic
# entry-points
# gui-scripts
# keywords
# license
# maintainers
# optional-dependencies
# scripts
# urls

[tool.setuptools.package-data]
portant_cement = ["*.js", "*.css","*.html"]


[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.urls]
"Homepage" = "http://github.com/strangemother/portland-cinderblock"
"Bug Tracker" = "http://github.com/strangemother/portland-cinderblock/issues"
