# https://packaging.python.org/en/latest/specifications/declaring-project-metadata/#example

[project]
name = "portland-cement"
# version = "0.1a"
authors = [
  { name="Strangemother", email="portland-cement@strangemother.com" },
]
description = "A Simple frontend buildout for wagtail projects"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
license = {text='MIT'}
dynamic = ['version']
# dependencies
# dynamic
# entry-points
# gui-scripts
# keywords
# license
# maintainers
# optional-dependencies
# scripts
# urls

[tool.setuptools.package-data]
portant_cement = ["*.js", "*.css","*.html"]

[project.scripts]
portland = 'portland.run:bin_main'
portland-cement = 'portland.run:bin_main'

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.urls]
"Homepage" = "http://github.com/strangemother/portland-cement"
"Bug Tracker" = "http://github.com/strangemother/portland-cement/issues"
